Bug 1803387 - destroy the compositor as soon as a window is closed, instead of waiting for it to be garbage collected, r=nical.

Differential Revision: https://phabricator.services.mozilla.com/D167075