browser/base/content/test/general/browser_beforeunload_duplicate_dialogs.js
@@ -36,16 +36,7 @@ function onCommonDialogLoaded(promptWindow) {
   let dialog = promptWindow.Dialog;
   if (wantToClose) {
     // This accepts the dialog, closing it.
-    // On Mac we wait 375ms (ie. the duration of the tab-burst-animation)
-    // to avoid bug 1765387.
-    if (AppConstants.platform == "macosx") {
-      // eslint-disable-next-line mozilla/no-arbitrary-setTimeout
-      setTimeout(() => {
-        dialog.ui.button0.click();
-      }, 375);
-    } else {
-      dialog.ui.button0.click();
-    }
+    dialog.ui.button0.click();
   } else {
     // This keeps the page open
     dialog.ui.button1.click();
